--- a/index.html
+++ b/index.html
@@ -39,49 +39,49 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
             <!-- Bouton: Autocontrôles -->
-            <button class="btn-custom bg-blue-600 text-white py-4 px-6 rounded-xl shadow-lg hover:bg-blue-700 transition duration-300 ease-in-out transform focus:outline-none focus:ring-4 focus:ring-blue-300" onclick="window.location.href='liens/Autocontroles_Diagramme_2025-06-13.html';">
+            <button class="btn-custom bg-blue-600 text-white py-4 px-6 rounded-xl shadow-lg hover:bg-blue-700 transition duration-300 ease-in-out transform focus:outline-none focus:ring-4 focus:ring-blue-300" onclick="window.location.href='https://gc-hvt.github.io/Synthese/Autocontroles_Diagramme_2025-06-13.html';">
                 <span class="block text-xl font-semibold mb-1">🛠️ Autocontrôles</span>
                 <span class="block text-sm opacity-90">Vérifications internes</span>
             </button>
 
             <!-- Bouton: Carnets d'heures non gérés -->
-            <button class="btn-custom bg-red-500 text-white py-4 px-6 rounded-xl shadow-lg hover:bg-red-600 transition duration-300 ease-in-out transform focus:outline-none focus:ring-4 focus:ring-red-300" onclick="window.location.href='liens/CarnetsNonGeres_2025-06-16.html';">
+            <button class="btn-custom bg-red-500 text-white py-4 px-6 rounded-xl shadow-lg hover:bg-red-600 transition duration-300 ease-in-out transform focus:outline-none focus:ring-4 focus:ring-red-300" onclick="window.location.href='https://gc-hvt.github.io/Synthese/CarnetsNonGeres_2025-06-16.html';">
                 <span class="block text-xl font-semibold mb-1">⏱️ Carnets d'heures non gérés</span>
                 <span class="block text-sm opacity-90">Suivi des temps manquants</span>
             </button>
 
             <!-- Bouton: Documents en GED admin -->
-            <button class="btn-custom bg-emerald-600 text-white py-4 px-6 rounded-xl shadow-lg hover:bg-emerald-700 transition duration-300 ease-in-out transform focus:outline-none focus:ring-4 focus:ring-emerald-300" onclick="window.location.href='liens/DocGED.html';">
+            <button class="btn-custom bg-emerald-600 text-white py-4 px-6 rounded-xl shadow-lg hover:bg-emerald-700 transition duration-300 ease-in-out transform focus:outline-none focus:ring-4 focus:ring-emerald-300" onclick="window.location.href='https://gc-hvt.github.io/Synthese/DocGED.html';">
                 <span class="block text-xl font-semibold mb-1">📄 Documents en GED admin</span>
                 <span class="block text-sm opacity-90">Accès aux documents administratifs</span>
             </button>
 
             <!-- Bouton: Fin d'OS dépassée -->
-            <button class="btn-custom bg-orange-500 text-white py-4 px-6 rounded-xl shadow-lg hover:bg-orange-600 transition duration-300 ease-in-out transform focus:outline-none focus:ring-4 focus:ring-orange-300" onclick="window.location.href='liens/FinOS_2025-06-13.html';">
+            <button class="btn-custom bg-orange-500 text-white py-4 px-6 rounded-xl shadow-lg hover:bg-orange-600 transition duration-300 ease-in-out transform focus:outline-none focus:ring-4 focus:ring-orange-300" onclick="window.location.href='https://gc-hvt.github.io/Synthese/FinOS_2025-06-13.html';">
                 <span class="block text-xl font-semibold mb-1">⚠️ Fin d'OS dépassée</span>
                 <span class="block text-sm opacity-90">Ordres de service en retard</span>
             </button>
 
             <!-- Bouton: Indicateurs -->
-            <button class="btn-custom bg-sky-600 text-white py-4 px-6 rounded-xl shadow-lg hover:bg-sky-700 transition duration-300 ease-in-out transform focus:outline-none focus:ring-4 focus:ring-sky-300" onclick="window.location.href='liens/Indicateurs_2025-06-16.html';">
+            <button class="btn-custom bg-sky-600 text-white py-4 px-6 rounded-xl shadow-lg hover:bg-sky-700 transition duration-300 ease-in-out transform focus:outline-none focus:ring-4 focus:ring-sky-300" onclick="window.location.href='https://gc-hvt.github.io/Synthese/Indicateurs_2025-06-16.html';">
                 <span class="block text-xl font-semibold mb-1">📈 Indicateurs</span>
                 <span class="block text-sm opacity-90">Tableaux de bord et statistiques</span>
             </button>
 
             <!-- Bouton: Portail partenaires (accès client) -->
-            <button class="btn-custom bg-purple-600 text-white py-4 px-6 rounded-xl shadow-lg hover:bg-purple-700 transition duration-300 ease-in-out transform focus:outline-none focus:ring-4 focus:ring-purple-300" onclick="window.location.href='liens/PortailPartenaire_2025-06-13.html';">
+            <button class="btn-custom bg-purple-600 text-white py-4 px-6 rounded-xl shadow-lg hover:bg-purple-700 transition duration-300 ease-in-out transform focus:outline-none focus:ring-4 focus:ring-purple-300" onclick="window.location.href='https://gc-hvt.github.io/Synthese/PortailPartenaire_2025-06-13.html';">
                 <span class="block text-xl font-semibold mb-1">🤝 Portail partenaires</span>
                 <span class="block text-sm opacity-90">Accès et informations clients</span>
             </button>
 
             <!-- Bouton: Projets sans réunions -->
-            <button class="btn-custom bg-pink-600 text-white py-4 px-6 rounded-xl shadow-lg hover:bg-pink-700 transition duration-300 ease-in-out transform focus:outline-none focus:ring-4 focus:ring-pink-300" onclick="window.location.href='liens/Reunions_2025-06-13.html';">
+            <button class="btn-custom bg-pink-600 text-white py-4 px-6 rounded-xl shadow-lg hover:bg-pink-700 transition duration-300 ease-in-out transform focus:outline-none focus:ring-4 focus:ring-pink-300" onclick="window.location.href='https://gc-hvt.github.io/Synthese/Reunions_2025-06-13.html';">
                 <span class="block text-xl font-semibold mb-1">📅 Projets sans réunions</span>
                 <span class="block text-sm opacity-90">Suivi des projets non planifiés</span>
             </button>
 
             <!-- Bouton: Sécurité mobile -->
-            <button class="btn-custom bg-gray-700 text-white py-4 px-6 rounded-xl shadow-lg hover:bg-gray-800 transition duration-300 ease-in-out transform focus:outline-none focus:ring-4 focus:ring-gray-300" onclick="window.location.href='liens/Telephone_2025-06-16.html';">
+            <button class="btn-custom bg-gray-700 text-white py-4 px-6 rounded-xl shadow-lg hover:bg-gray-800 transition duration-300 ease-in-out transform focus:outline-none focus:ring-4 focus:ring-gray-300" onclick="window.location.href='https://gc-hvt.github.io/Synthese/Telephone_2025-06-16.html';">
                 <span class="block text-xl font-semibold mb-1">📱 Sécurité mobile</span>
                 <span class="block text-sm opacity-90">Politiques et état de la sécurité des appareils</span>
             </button>
