--- a/Telephone_2025-06-16.html
+++ b/Telephone_2025-06-16.html
@@ -26,9 +26,35 @@
             margin: 2px; /* Petite marge autour de chaque bloc */
             display: inline-block;
         }
+
+                .home-button {
+            position: fixed; /* Fixe le bouton par rapport à la fenêtre de visualisation */
+            top: 20px;       /* Marge de 20px depuis le haut */
+            left: 20px;      /* Marge de 20px depuis la gauche */
+            background-color: #007bff; /* Couleur de fond bleue */
+            color: white;      /* Couleur de l'icône blanche */
+            padding: 10px; /* Espacement interne */
+            border-radius: 5px; /* Coins légèrement arrondis */
+            text-decoration: none; /* Supprime le soulignement du lien */
+            font-size: 14px;   /* Taille de l'icône */
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* Légère ombre pour un effet de profondeur */
+            transition: background-color 0.3s ease; /* Transition douce au survol */
+            z-index: 1000;     /* S'assure que le bouton est au-dessus des autres éléments */
+            display: flex;     /* Pour centrer l'icône si nécessaire */
+            align-items: center; /* Pour centrer l'icône si nécessaire */
+            justify-content: center; /* Pour centrer l'icône si nécessaire */
+        }
+
+        .home-button:hover {
+            background-color: #0056b3; /* Couleur de fond plus foncée au survol */
+        }
     </style>
 </head>
 <body class="p-2 bg-gray-100 antialiased">
+
+    <a href="votre-page-d-accueil.html" class="home-button">
+        <i class="fas fa-home"></i>
+    </a>
     <h1 class="text-2xl font-bold text-center text-gray-800 mb-6 sm:text-3xl">Antivirus / Enrôlement</h1>
 
     <div id="responsibles-dashboard" class="max-w-4xl mx-auto"></div>
