--- a/Telephone_2025-06-16.html
+++ b/Telephone_2025-06-16.html
@@ -6,6 +6,8 @@
     <title>Antivirus à activer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -52,7 +54,7 @@
 </head>
 <body class="p-2 bg-gray-100 antialiased">
 
-    <a href="votre-page-d-accueil.html" class="home-button">
+    <a href="https://gc-hvt.github.io/Synthese/" class="home-button">
         <i class="fas fa-home"></i>
     </a>
     <h1 class="text-2xl font-bold text-center text-gray-800 mb-6 sm:text-3xl">Antivirus / Enrôlement</h1>
