--- a/Indicateurs_2025-06-16.html
+++ b/Indicateurs_2025-06-16.html
@@ -10,12 +10,34 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Font Awesome pour les icônes d'accordéon (flèche) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         /* Configuration de la police Inter */
         body {
             font-family: 'Inter', sans-serif;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
+        }
+
+        .home-button {
+            top: 20px;       /* Marge de 20px depuis le haut */
+            left: 20px;      /* Marge de 20px depuis la gauche */
+            background-color: #007bff; /* Couleur de fond bleue */
+            color: white;      /* Couleur de l'icône blanche */
+            padding: 10px; /* Espacement interne */
+            border-radius: 5px; /* Coins légèrement arrondis */
+            text-decoration: none; /* Supprime le soulignement du lien */
+            font-size: 14px;   /* Taille de l'icône */
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* Légère ombre pour un effet de profondeur */
+            transition: background-color 0.3s ease; /* Transition douce au survol */
+            z-index: 1000;     /* S'assure que le bouton est au-dessus des autres éléments */
+            display: flex;     /* Pour centrer l'icône si nécessaire */
+            align-items: center; /* Pour centrer l'icône si nécessaire */
+            justify-content: center; /* Pour centrer l'icône si nécessaire */
+        }
+
+        .home-button:hover {
+            background-color: #0056b3; /* Couleur de fond plus foncée au survol */
         }
         /* Style pour les en-têtes des tableaux */
         th {
@@ -104,6 +126,9 @@
     </style>
 </head>
 <body class="bg-gray-100 p-6">
+    <a href="https://gc-hvt.github.io/Synthese/" class="home-button">
+        <i class="fas fa-home"></i>
+    </a>
     <div class="max-w-full mx-auto bg-white rounded-xl shadow-lg p-8">
         <h1 class="text-3xl font-bold text-gray-800 mb-8 text-center">Évolution Mensuelle des Indicateurs</h1>
 
