--- a/FinOS_2025-06-13.html
+++ b/FinOS_2025-06-13.html
@@ -8,6 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Font: Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <style>
         /* Styles personnalisés pour la flèche de l'accordéon */
         .arrow-icon {
@@ -19,10 +21,32 @@
         body {
             font-family: 'Inter', sans-serif;
         }
+        .home-button {
+            top: 20px;       /* Marge de 20px depuis le haut */
+            left: 20px;      /* Marge de 20px depuis la gauche */
+            background-color: #007bff; /* Couleur de fond bleue */
+            color: white;      /* Couleur de l'icône blanche */
+            padding: 10px; /* Espacement interne */
+            border-radius: 5px; /* Coins légèrement arrondis */
+            text-decoration: none; /* Supprime le soulignement du lien */
+            font-size: 14px;   /* Taille de l'icône */
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* Légère ombre pour un effet de profondeur */
+            transition: background-color 0.3s ease; /* Transition douce au survol */
+            z-index: 1000;     /* S'assure que le bouton est au-dessus des autres éléments */
+            display: flex;     /* Pour centrer l'icône si nécessaire */
+            align-items: center; /* Pour centrer l'icône si nécessaire */
+            justify-content: center; /* Pour centrer l'icône si nécessaire */
+        }
+
+        .home-button:hover {
+            background-color: #0056b3; /* Couleur de fond plus foncée au survol */
+        }
     </style>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans leading-normal tracking-normal p-3 md:p-4">
-
+    <a href="https://gc-hvt.github.io/Synthese/" class="home-button">
+        <i class="fas fa-home"></i>
+    </a>
     <div class="container mx-auto my-6 p-4 md:p-6 bg-white shadow-lg rounded-xl border border-gray-100">
         <h1 class="text-3xl md:text-4xl font-bold text-center text-gray-900 mb-6 md:mb-4 tracking-tight">Fin OS Dépassé</h1>
 
