--- a/CarnetsNonGeres_2025-06-16.html
+++ b/CarnetsNonGeres_2025-06-16.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carnets non gérés par Manager</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Styles de base pour le corps et le conteneur principal */
@@ -14,6 +15,28 @@
             margin: 0;
             padding: 20px;
         }
+
+        .home-button {
+            top: 20px;       /* Marge de 20px depuis le haut */
+            left: 20px;      /* Marge de 20px depuis la gauche */
+            background-color: #007bff; /* Couleur de fond bleue */
+            color: white;      /* Couleur de l'icône blanche */
+            padding: 10px; /* Espacement interne */
+            border-radius: 5px; /* Coins légèrement arrondis */
+            text-decoration: none; /* Supprime le soulignement du lien */
+            font-size: 14px;   /* Taille de l'icône */
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* Légère ombre pour un effet de profondeur */
+            transition: background-color 0.3s ease; /* Transition douce au survol */
+            z-index: 1000;     /* S'assure que le bouton est au-dessus des autres éléments */
+            display: flex;     /* Pour centrer l'icône si nécessaire */
+            align-items: center; /* Pour centrer l'icône si nécessaire */
+            justify-content: center; /* Pour centrer l'icône si nécessaire */
+        }
+
+        .home-button:hover {
+            background-color: #0056b3; /* Couleur de fond plus foncée au survol */
+        }
+        
         .container {
             max-width: 1200px;
             margin: 20px auto;
@@ -211,7 +234,9 @@
     </style>
 </head>
 <body>
-
+    <a href="https://gc-hvt.github.io/Synthese/" class="home-button">
+        <i class="fas fa-home"></i>
+    </a>
 <div class="container" id="app-container">
     <h1>Carnets non gérés par Manager</h1>
     <div class="legend">
