--- a/Autocontroles_Diagramme_2025-06-13.html
+++ b/Autocontroles_Diagramme_2025-06-13.html
@@ -8,11 +8,33 @@
     <!-- Chargement de Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         /* Styles personnalisés qui ne peuvent pas être facilement remplacés par Tailwind ou pour des ajustements spécifiques */
         body {
             font-family: 'Inter', sans-serif;
         }
+
+        .home-button {
+            top: 20px;       /* Marge de 20px depuis le haut */
+            left: 20px;      /* Marge de 20px depuis la gauche */
+            background-color: #007bff; /* Couleur de fond bleue */
+            color: white;      /* Couleur de l'icône blanche */
+            padding: 10px; /* Espacement interne */
+            border-radius: 5px; /* Coins légèrement arrondis */
+            text-decoration: none; /* Supprime le soulignement du lien */
+            font-size: 14px;   /* Taille de l'icône */
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* Légère ombre pour un effet de profondeur */
+            transition: background-color 0.3s ease; /* Transition douce au survol */
+            z-index: 1000;     /* S'assure que le bouton est au-dessus des autres éléments */
+            align-items: center; /* Pour centrer l'icône si nécessaire */
+            justify-content: center; /* Pour centrer l'icône si nécessaire */
+        }
+
+        .home-button:hover {
+            background-color: #0056b3; /* Couleur de fond plus foncée au survol */
+        }
+        
         canvas {
             /* Assure que le canvas ne déborde pas et gère sa hauteur automatiquement */
             max-width: 100%;
@@ -35,6 +57,9 @@
     </style>
 </head>
 <body class="p-2 bg-gray-100 antialiased">
+    <a href="https://gc-hvt.github.io/Synthese/" class="home-button">
+        <i class="fas fa-home"></i>
+    </a>
     <h1 class="text-2xl font-bold text-center text-gray-800 mb-2 sm:text-3xl">Autocontrôles - Grands Projets</h1>
     <div class="text-center mb-4 text-sm text-gray-600">
         <span class="inline-block w-3 h-3 bg-green-500 rounded-full mr-1 align-middle"></span> <span class="font-bold">Conforme</span> &nbsp;&nbsp;
