--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </h1>
         <!-- Sous-titre -->
         <p class="text-lg text-gray-500 mb-8">
-            mai 2025
+            Territoire Grands Projets - Mai 2025
         </p>
 
         <!-- Description ou introduction -->
