--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!-- Bouton: Fin d'OS dépassée -->
             <button class="btn-custom bg-orange-500 text-white py-4 px-6 rounded-xl shadow-lg hover:bg-orange-600 transition duration-300 ease-in-out transform focus:outline-none focus:ring-4 focus:ring-orange-300" onclick="window.location.href='https://gc-hvt.github.io/Synthese/FinOS_2025-06-13.html';">
                 <span class="block text-xl font-semibold mb-1">⚠️ Fin d'OS dépassée</span>
-                <span class="block text-sm opacity-90">Ordres de service en retard</span>
+                <span class="block text-sm opacity-90">Dates d'ordres de service à mettre à jour</span>
             </button>
 
             <!-- Bouton: Indicateurs -->
